<?xml version="1.0"?>
<package format="2">
  <name>esim_srvs</name>
  <version>0.0.0</version>
  <description>ROS server definitions for the event camera simulator.</description>
  <maintainer email="shujingzhe1996@gmail.com">Jingzhe Shu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
